...
            style={styles.boldText}
            align={'center'}>
            {String.idVerificationTitle}
          </CText>

          <CText
            testID="idVerificationSubtitle"
            type={'B16'}
            align={'center'}>
            {isRecovery ? String.toRecovery : String.toContinue}
            {String.idVerificationSubtitle}
          </CText>

          <CInput
            _value={idNumber}
            testID="idNumberInput"
            label={String.idLabel}
            typeText="B14"
            labelTextColor={colors.textColor}
            toGetTextFieldValue={setIdNumber}
            onEndEditing={handleCheckAndNext}
            placeHolder={String.idPlaceholder}
...
        </View>
      </KeyBoardAvoidWrapper>
      <View
        testID="registerUser2BottomContainer"
        style={localStyle.bottomTextContainer}>
        <CButton
          testID="continueVerificationButton"
          disabled={!isFormValid() || submitting}
          title={submitting ? String.checking : String.continueButton}
          onPress={handleCheckAndNext}
          type="B16"
          containerStyle={localStyle.btnStyle}
        />
...
