...
      </KeyBoardAvoidWrapper>

      <View testID="registerUser1BottomSection" style={localStyle.bottomTextContainer}>
        <View testID="termsCheckboxContainer" style={localStyle.rowWithGap}>
          <TouchableOpacity testID="termsCheckbox" onPress={onPressRememberMe}>
            <Ionicons
              testID="termsCheckboxIcon"
              name={check ? 'checkbox' : 'square-outline'}
              color={colors.primary}
              size={moderateScale(24)}
            />
          </TouchableOpacity>

...
          </CText>
        </View>

        <CAlert testID="registerUser1InfoAlert" status="info" message={String.infoMessage} />

        <CButton
          testID="registerUser1ContinueButton"
          title={String.continueButton}
          disabled={!check}
          onPress={onPressNext}
          type={'B16'}
          containerStyle={localStyle.btnStyle}
        />
...
