...
      </View>
      <CButton
        title={String.getStarted}
        type={'B16'}
        containerStyle={localStyle.btnStyle}
        onPress={onPressGetStarted}
        testID="onboardingGetStartedButton"
      />
    </CSafeAreaViewAuth>
  );
}

const localStyle = StyleSheet.create({
...
