...
  );

  return (
    <CSafeAreaView testID="onboardingGuardiansContainer">
      <View testID="onboardingGuardiansSkipWrapper" style={localStyle.skipWrapper}>
        <TouchableOpacity
          testID="onboardingGuardiansSkipButton"
          style={[
            localStyle.skipIconContainer,
            {backgroundColor: colors.grayScale400},
          ]}
          onPress={onPressSkip}>
          <MaterialCommunityIcons testID="onboardingGuardiansSkipIcon" name="close" size={20} color={colors.white} />
...
              },
            ]}
          />
        ))}
      </View>
      <CButton
        testID="onboardingGuardiansGetStartedButton"
        title={String.getStarted}
        type={'B16'}
        containerStyle={localStyle.btnStyle}
        onPress={onPressGetStarted}
      />
    </CSafeAreaView>
...
