...
      </TouchableOpacity>
    );
  };

  const InfoCard = () => (
    <TouchableOpacity
      testID="guardiansInfoCard"
      style={[
        localStyle.infoCard,
        {
          backgroundColor: colors.stepBackgroundColor,
          borderColor: colors.dark ? colors.grayScale700 : colors.grayScale200,
        },
...
      <View testID="guardiansBottomContainer" style={localStyle.bottomTextContainer}>
        {guardians.length <= 1 && (
          <CAlert testID="guardiansRequiredAlert" status="info" message={String.alertguardiansrequired} />
        )}

        <CButton
          testID="guardiansAddButton"
          title={` ${String.addGuardian}`}
          onPress={onPressAddGuardian}
          type={'B16'}
          containerStyle={localStyle.btnStyle1}
          frontIcon={<Icono testID="guardiansAddButtonIcon" size={20} name="account-plus" color={'#fff'} />}
        />
...
